Updated lab notebook

--- a/ri_lab_notebook_March2022.ipynb
+++ b/ri_lab_notebook_March2022.ipynb
@@ -210,6 +210,24 @@
     "                     shell='run_base_nal.sh',nodes=2)\n",
     "ripropagate.comp_ascii(depth=600,output='./031222_ri',non_initial=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3/15/2022 ##\n",
+    "* 10 by 10 model finished rifting. Inverting now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./031522_ri',file='ri_base_highpart10.prm',soft=0.375,depth=600,p1=400,p2=200,\n",
+    "                     shell='run_base_nal.sh',nodes=3)"
+   ]
   }
  ],
  "metadata": {
