Updated Lab Notebook

--- a/ri_lab_notebook_March2022.ipynb
+++ b/ri_lab_notebook_March2022.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,6 +226,24 @@
    "outputs": [],
    "source": [
     "ripropagate.generate(etime=32.5,evel=-1,output='./031522_ri',file='ri_base_highpart10.prm',soft=0.375,depth=600,p1=400,p2=200,\n",
+    "                     shell='run_base_nal.sh',nodes=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3/28/2022 ##\n",
+    "* high res box model finished rifting, starting inversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./032822_ri',file='ri_base_center.prm',soft=0.375,depth=600,p1=400,p2=200,\n",
     "                     shell='run_base_nal.sh',nodes=3)"
    ]
   }
