Fixed composition files for first runs

--- a/ri_lab_notebook_AprilMay2022.ipynb
+++ b/ri_lab_notebook_AprilMay2022.ipynb
@@ -305,11 +305,11 @@
     "\n",
     "# Hot and fast\n",
     "ripropagate.generate(etime=20,evel=1.5,lthick=60,output='./052022_rip_b',file='ri_base_lowoutput.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='b',nodes=3)\n",
-    "ripropagate.comp_ascii(depth=600,output='./052022_rip_b',seed=20,non_initial=True)\n",
+    "ripropagate.comp_ascii(depth=600,output='./052022_rip_b',seed=20,non_initial=True,thicknesses=[20,20,20])\n",
     "\n",
     "# Slow and cold\n",
     "ripropagate.generate(etime=30,evel=0.5,lthick=120,output='./052022_rip_c',file='ri_base_lowoutput.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='c',nodes=3)\n",
-    "ripropagate.comp_ascii(depth=600,output='./052022_rip_c',seed=20,non_initial=True)"
+    "ripropagate.comp_ascii(depth=600,output='./052022_rip_c',seed=20,non_initial=True,thicknesses=[20,20,80])"
    ]
   }
  ],
