--- a/ri_lab_notebook_AprilMay2022.ipynb
+++ b/ri_lab_notebook_AprilMay2022.ipynb
@@ -311,14 +311,32 @@
     "ripropagate.generate(etime=30,evel=0.5,lthick=120,output='./052022_rip_c',file='ri_base_lowoutput.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='c',nodes=3)\n",
     "ripropagate.comp_ascii(depth=600,output='./052022_rip_c',seed=20,non_initial=True,thicknesses=[20,20,80])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5/22/2022 ##\n",
+    "* Reference model (052022 a) finished rifting. Starting inversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./052222_rip_a',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200,\n",
+    "                     shell='run_base.sh',ver='a',nodes=3)"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "6df6f39227354d572197aa470e8e4930983781d5734fc7e0dd4ec5858524caac"
+   "hash": "0063bcc605341cc03af99af1c3d4af8542643b65cfead928c8102ff8d3902e21"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('aspect')",
+   "display_name": "Python 3.9.12 ('aspect')",
    "language": "python",
    "name": "python3"
   },
@@ -332,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
