--- a/ri_lab_notebook_AprilMay2022.ipynb
+++ b/ri_lab_notebook_AprilMay2022.ipynb
@@ -456,10 +456,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "0063bcc605341cc03af99af1c3d4af8542643b65cfead928c8102ff8d3902e21"
+   "hash": "18d8e13981ea841ceecfd7b0ec94a3278f67291940f69a698b5bb2c765848fe6"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('aspect')",
+   "display_name": "Python 3.10.4 ('riftinversion')",
    "language": "python",
    "name": "python3"
   },
@@ -473,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
