--- a/ri_lab_notebook_AprilMay2022.ipynb
+++ b/ri_lab_notebook_AprilMay2022.ipynb
@@ -452,14 +452,28 @@
     "ripropagate.generate(etime=20,evel=2,lthick=100,output='./060522_rip',file='ri_base_lowoutput.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='a',nodes=3)\n",
     "ripropagate.comp_ascii(depth=600,output='./060522_rip',seed=20,non_initial=True,thicknesses=[20,20,60])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6/17/2022 ##\n",
+    "* Discovered timestepping was the culprit. Rewrote 80 km model to have 10,000 year timestep, with AMR transitions at 150 km and 250 km (temp based)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=20,evel=2,lthick=80,output='./061722_rip',file='ri_base_lowoutput_lowtstep.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='a',nodes=3)"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "18d8e13981ea841ceecfd7b0ec94a3278f67291940f69a698b5bb2c765848fe6"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('riftinversion')",
+   "display_name": "Python 3.9.7 ('aspect')",
    "language": "python",
    "name": "python3"
   },
@@ -473,9 +487,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "6df6f39227354d572197aa470e8e4930983781d5734fc7e0dd4ec5858524caac"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
