Updated lab notebook

--- a/ri_lab_notebook_AprilMayJune2022.ipynb
+++ b/ri_lab_notebook_AprilMayJune2022.ipynb
@@ -774,6 +774,30 @@
     "ripropagate.generate(etime=16,evel=0.5,lthick=120,output='./062822_rip_b',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='b',nodes=3)\n",
     "ripropagate.comp_ascii(depth=600,output='./062822_rip_b',seed=20,non_initial=True,thicknesses=[20,20,80])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6/30/2022 ##\n",
+    "* Finished running slow/cold model halfway to breakup (0628b), not inverting, letting sit, and rifting to full breakup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# full breakup\n",
+    "ripropagate.generate(etime=32,evel=0.5,lthick=120,output='./063022_rip_a',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='a',nodes=3)\n",
+    "\n",
+    "# quiescence\n",
+    "ripropagate.generate(etime=36,evel=0,lthick=120,output='./063022_rip_b',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='b',nodes=3)\n",
+    "\n",
+    "# inversion\n",
+    "ripropagate.generate(etime=36,evel=-1,lthick=120,output='./063022_rip_c',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='c',nodes=3)"
+   ]
   }
  ],
  "metadata": {
