Started July lab notebook

--- a/ri_lab_notebook_AprilMayJune2022.ipynb
+++ b/ri_lab_notebook_AprilMayJune2022.ipynb
@@ -780,7 +780,7 @@
    "metadata": {},
    "source": [
     "## 6/30/2022 ##\n",
-    "* Finished running slow/cold model halfway to breakup (0628b), not inverting, letting sit, and rifting to full breakup"
+    "* Finished running slow/cold model halfway to breakup (0628b), now inverting, letting sit, and rifting to full breakup"
    ]
   },
   {
