Updated lab notebook

--- a/ri_lab_notebook_July2022.ipynb
+++ b/ri_lab_notebook_July2022.ipynb
@@ -82,6 +82,50 @@
     "ripropagate.generate(etime=7.3,evel=2,lthick=80,output='./070122_rip',file='ri_base_lowtstep.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='a',nodes=3)\n",
     "ripropagate.comp_ascii(depth=600,output='./070122_rip',seed=20,non_initial=True,thicknesses=[20,20,40])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7/4/2022 ##\n",
+    "* Finished rifting to halfway, so doing full rift, quiescence, and inversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Full rift\n",
+    "ripropagate.generate(etime=14.5,evel=2,lthick=80,output='./070422_rip_a',file='ri_base_lowtstep.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='a',nodes=3)\n",
+    "\n",
+    "# Quiescence\n",
+    "ripropagate.generate(etime=27.3,evel=0,lthick=80,output='./070422_rip_b',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='b',nodes=3)\n",
+    "\n",
+    "# Inversion\n",
+    "ripropagate.generate(etime=27.3,evel=-1,lthick=80,output='./070422_rip_c',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='c',nodes=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Also finished full rift for slow/cold, so starting and inversion and quiescence for that model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# quiescence\n",
+    "ripropagate.generate(etime=52,evel=0,lthick=120,output='./070422_rip_d',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='d',nodes=3)\n",
+    "\n",
+    "# inversion\n",
+    "ripropagate.generate(etime=52,evel=-1,lthick=120,output='./070422_rip_e',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='e',nodes=3)"
+   ]
   }
  ],
  "metadata": {
