Started work on quiescence function

--- a/ri_lab_notebook_July2022.ipynb
+++ b/ri_lab_notebook_July2022.ipynb
@@ -126,6 +126,24 @@
     "# inversion\n",
     "ripropagate.generate(etime=52,evel=-1,lthick=120,output='./070422_rip_e',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='e',nodes=3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7/6/2022 ##\n",
+    "* Full rift finished for hot/fast (0704a), so starting inversion.\n",
+    "* Quiescence has been running quite slowly, probably due to abrupt transition to 0 velocity, so holding off on that until test run with gradual velocity transition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=34.5,evel=-1,lthick=80,output='./070622_rip_a',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='a',nodes=3)"
+   ]
   }
  ],
  "metadata": {
