--- a/ri_lab_notebook_July2022.ipynb
+++ b/ri_lab_notebook_July2022.ipynb
@@ -120,6 +120,23 @@
     "ripropagate.generate(etime=36,evel=0,lthick=120,output='./070722_rip_a',file='ri_base_qui.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='a',nodes=3,\n",
     "quiescence=True,v1=0.5,v2=-1,start=16)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7/8/2022 ##\n",
+    "* Going to try old quiescence on hot fast full breakup model (0704a) since it seems to run ok for these."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=34.5,evel=0,lthick=80,output='./070822_rip',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='a',nodes=3)"
+   ]
   }
  ],
  "metadata": {
