--- a/ri_lab_notebook_July2022.ipynb
+++ b/ri_lab_notebook_July2022.ipynb
@@ -248,6 +248,51 @@
     "ripropagate.generate(etime=25,evel=0.5,lthick=120,output='./071422_rip_d',file='ri_base_wet.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='d',nodes=3)\n",
     "ripropagate.comp_ascii(depth=600,output='./071422_rip_d',seed=20,non_initial=True,thicknesses=[20,20,80])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7/18/2022 ##\n",
+    "* Hot fast dislocation creep needs to run farther (15 Myr)\n",
+    "* Also need to invert quiescence model for slow-cold-half\n",
+    "* Also need to run slow cold dislocation farther (30 Myr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hot fast dislocation continuation\n",
+    "ripropagate.generate(etime=15,evel=2,lthick=80,output='./071822_rip_a',file='ri_base_disl_lowtstep.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='a',nodes=3)\n",
+    "\n",
+    "# inversion of slow-cold-half-quiescent\n",
+    "ripropagate.generate(etime=56,evel=-1,lthick=120,output='./071822_rip_b',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='b',nodes=3)\n",
+    "\n",
+    "# slow cold dislocation continuation\n",
+    "ripropagate.generate(etime=30,evel=0.5,lthick=120,output='./071822_rip_c',file='ri_base_disl.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='c',nodes=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7/20/2022 ##\n",
+    "* Holding off on dislocatioin creep models until flow law confusion resolved.\n",
+    "* But ready to invert quiescence model for slow_cold_full (0704d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inversion of slow-cold-half-quiescent\n",
+    "ripropagate.generate(etime=72,evel=-1,lthick=120,output='./072022_rip_a',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='20a',nodes=3)"
+   ]
   }
  ],
  "metadata": {
