Updated lab notebook

--- a/ri_lab_notebook_July2022.ipynb
+++ b/ri_lab_notebook_July2022.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,8 @@
    "source": [
     "## 7/20/2022 ##\n",
     "* Holding off on dislocatioin creep models until flow law confusion resolved.\n",
-    "* But ready to invert quiescence model for slow_cold_full (0704d)"
+    "* But ready to invert quiescence model for slow_cold_full (0704d)\n",
+    "* Also ready for hot_fast_full (0708)"
    ]
   },
   {
@@ -290,8 +291,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# inversion of slow-cold-half-quiescent\n",
-    "ripropagate.generate(etime=72,evel=-1,lthick=120,output='./072022_rip_a',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='20a',nodes=3)"
+    "# inversion of slow-cold-full-quiescent\n",
+    "ripropagate.generate(etime=72,evel=-1,lthick=120,output='./072022_rip_a',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='20a',nodes=3)\n",
+    "\n",
+    "# inversion of hot-fast-full-quiescent\n",
+    "ripropagate.generate(etime=54.5,evel=-1,lthick=80,output='./072022_rip_b',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='hff',nodes=3)"
    ]
   }
  ],
