Added high diffusion to crashing models

--- a/ri_lab_notebook_August2022.ipynb
+++ b/ri_lab_notebook_August2022.ipynb
@@ -69,6 +69,25 @@
     "ripropagate.generate(etime=31.3,evel=-5,lthick=80,output='./080122_rip_g',file='ri_base_verylowtstep.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='g',nodes=3)\n",
     "ripropagate.generate(etime=38.5,evel=-5,lthick=80,output='./080122_rip_h',file='ri_base_verylowtstep.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='h',nodes=3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8/9/2022 ##\n",
+    "* Most of the models ran, but two (0801a and 0801e) had crazy topography and crashed, so re-running them with higher hillslope diffusion.\n",
+    "* These are the slow-cold-half (0628b) and slow-cold-half-qui (0630b) models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=20,evel=-5,lthick=120,output='./080922_rip_a',file='ri_base_verylowtstep_highdiff.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='a',nodes=3)\n",
+    "ripropagate.generate(etime=40,evel=-5,lthick=120,output='./080922_rip_b',file='ri_base_verylowtstep_highdiff.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_base.sh',ver='b',nodes=3)"
+   ]
   }
  ],
  "metadata": {
