Worked on fastscape tests

--- a/24_03_labnotebook.ipynb
+++ b/24_03_labnotebook.ipynb
@@ -185,6 +185,24 @@
     "ripropagate.generate(etime=16,evel=0.5,lthick=120,output='./041924_rif',file='ri_base_fs.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_tufts.sh',ver='a',nodes=4)\n",
     "ripropagate.comp_ascii(depth=600,output='./041924_rif',seed=20,non_initial=True,thicknesses=[20,20,80])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4/23/24\n",
+    "\n",
+    "Attempting to invert the low n version of this model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=36,evel=-1,lthick=120,output='./042324_rif',file='ri_base_fs_lown.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_tufts.sh',ver='a',nodes=2)"
+   ]
   }
  ],
  "metadata": {
