Worked on inverting higher n model

--- a/24_03_labnotebook.ipynb
+++ b/24_03_labnotebook.ipynb
@@ -203,6 +203,23 @@
    "source": [
     "ripropagate.generate(etime=36,evel=-1,lthick=120,output='./042324_rif',file='ri_base_fs_lown.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_tufts.sh',ver='a',nodes=2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4/26/24\n",
+    "Attempting to invert the high n version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=36,evel=-1,lthick=120,output='./042324_rif',file='ri_base_fs_lown.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_tufts.sh',ver='a',nodes=2)"
+   ]
   }
  ],
  "metadata": {
