Minor update to notebook.

--- a/24_03_labnotebook.ipynb
+++ b/24_03_labnotebook.ipynb
@@ -214,11 +214,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ripropagate.generate(etime=36,evel=-1,lthick=120,output='./042324_rif',file='ri_base_fs_lown.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_tufts.sh',ver='a',nodes=2)"
+    "ripropagate.generate(etime=36,evel=-1,lthick=120,output='./042624_rif',file='ri_base_fs.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_tufts.sh',ver='a',nodes=2)"
    ]
   }
  ],
@@ -238,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
