Made updates to fastscape test files

--- a/24_03_labnotebook.ipynb
+++ b/24_03_labnotebook.ipynb
@@ -279,6 +279,24 @@
     "ripropagate.generate(etime=16,evel=0.5,lthick=120,output='./052824_rif',file='ri_base_fs_lown.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_tufts.sh',ver='a',nodes=2)\n",
     "ripropagate.comp_ascii(depth=600,output='./052824_rif',seed=20,non_initial=True,thicknesses=[20,20,80])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6/5/24\n",
+    "Have both an original and efficient solver model running from manual prms. Creating inversion prms for those."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=36,evel=-1,lthick=120,output='./060524_rif_eff',file='ri_base_fs_lown_eff.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_tufts.sh',ver='a',nodes=2)\n",
+    "ripropagate.generate(etime=36,evel=-1,lthick=120,output='./060524_rif',file='ri_base_fs_lown.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_tufts.sh',ver='b',nodes=2)"
+   ]
   }
  ],
  "metadata": {
