--- a/24_03_labnotebook.ipynb
+++ b/24_03_labnotebook.ipynb
@@ -297,6 +297,22 @@
     "ripropagate.generate(etime=36,evel=-1,lthick=120,output='./060524_rif_eff',file='ri_base_fs_lown_eff.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_tufts.sh',ver='a',nodes=2)\n",
     "ripropagate.generate(etime=36,evel=-1,lthick=120,output='./060524_rif',file='ri_base_fs_lown.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_tufts.sh',ver='b',nodes=2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also want to try a version of DT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=7.3,evel=-2,lthick=80,output='./060524_rif_eff_dt',file='ri_base_fs_lown_eff.prm',soft=0.375,depth=600,p1=400,p2=200, shell='run_tufts.sh',ver='c',nodes=2)"
+   ]
   }
  ],
  "metadata": {
